src/include/jme/jme.h

            int jme_body_id_from_name(const char *name);
            int jme_body_naif_id(int body);
            int jme_calc(double jd_et, int body, int flags, double *results, char *error);
            int jme_calc_pctr(double jd_et, int body, int center, int flags, double *results, char *error);
            int jme_calc_ut(double jd_ut, int body, int flags, double *results, char *error);
            int jme_calendar_is_leap_year(int year, int calendar);
            int jme_centiseconds_difference(int p1, int p2);
            int jme_centiseconds_difference_signed(int p1, int p2);
            int jme_centiseconds_normalize(int p);
            int jme_centiseconds_round_second(int x);
            void jme_close(void);
            int jme_date_is_valid(int year, int month, int day, int calendar);
            int jme_day_of_week(double jd);
            int jme_day_of_year(int year, int month, int day, int calendar);
            int jme_days_in_month(int year, int month, int calendar);
            double jme_decimal_hour(int hour, int minute, double second);
            double jme_degree_midpoint(double x1, double x0);
            double jme_degree_normalize(double x);
            double jme_degrees_difference(double p1, double p2);
            double jme_degrees_difference_signed(double p1, double p2);
            double jme_degrees_to_hours(double degrees);
            double jme_degrees_to_radians(double degrees);
            double jme_delta_t(double jd_ut);
            double jme_delta_t_ex(double jd_ut, int model, char *error);
            int jme_double_to_long(double x);
            void jme_ecliptic_to_equatorial( double lon, double lat, double eps, double *ra, double *dec );