lib/src/jme_bindings.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names
// ignore_for_file: unused_element
// ignore_for_file: unused_field
// ignore_for_file: type=lint

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// Bindings for JPL Moshier Ephemeris.
class JmeBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  JmeBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  JmeBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int jme_body_id_from_name(
    ffi.Pointer<ffi.Char> name,
  ) {
    return _jme_body_id_from_name(
      name,
    );
  }

  late final _jme_body_id_from_namePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'jme_body_id_from_name');
  late final _jme_body_id_from_name = _jme_body_id_from_namePtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int jme_body_naif_id(
    int body,
  ) {
    return _jme_body_naif_id(
      body,
    );
  }

  late final _jme_body_naif_idPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
          'jme_body_naif_id');
  late final _jme_body_naif_id =
      _jme_body_naif_idPtr.asFunction<int Function(int)>();

  int jme_calc(
    double jd_et,
    int body,
    int flags,
    ffi.Pointer<ffi.Double> results,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_calc(
      jd_et,
      body,
      flags,
      results,
      error,
    );
  }

  late final _jme_calcPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Double, ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>>('jme_calc');
  late final _jme_calc = _jme_calcPtr.asFunction<
      int Function(
          double, int, int, ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>();

  int jme_calc_pctr(
    double jd_et,
    int body,
    int center,
    int flags,
    ffi.Pointer<ffi.Double> results,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_calc_pctr(
      jd_et,
      body,
      center,
      flags,
      results,
      error,
    );
  }

  late final _jme_calc_pctrPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Double>,
              ffi.Pointer<ffi.Char>)>>('jme_calc_pctr');
  late final _jme_calc_pctr = _jme_calc_pctrPtr.asFunction<
      int Function(double, int, int, int, ffi.Pointer<ffi.Double>,
          ffi.Pointer<ffi.Char>)>();

  int jme_calc_ut(
    double jd_ut,
    int body,
    int flags,
    ffi.Pointer<ffi.Double> results,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_calc_ut(
      jd_ut,
      body,
      flags,
      results,
      error,
    );
  }

  late final _jme_calc_utPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Double, ffi.Int, ffi.Int,
              ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>>('jme_calc_ut');
  late final _jme_calc_ut = _jme_calc_utPtr.asFunction<
      int Function(
          double, int, int, ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Char>)>();

  int jme_calendar_is_leap_year(
    int year,
    int calendar,
  ) {
    return _jme_calendar_is_leap_year(
      year,
      calendar,
    );
  }

  late final _jme_calendar_is_leap_yearPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
          'jme_calendar_is_leap_year');
  late final _jme_calendar_is_leap_year =
      _jme_calendar_is_leap_yearPtr.asFunction<int Function(int, int)>();

  int jme_centiseconds_difference(
    int p1,
    int p2,
  ) {
    return _jme_centiseconds_difference(
      p1,
      p2,
    );
  }

  late final _jme_centiseconds_differencePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
          'jme_centiseconds_difference');
  late final _jme_centiseconds_difference =
      _jme_centiseconds_differencePtr.asFunction<int Function(int, int)>();

  int jme_centiseconds_difference_signed(
    int p1,
    int p2,
  ) {
    return _jme_centiseconds_difference_signed(
      p1,
      p2,
    );
  }

  late final _jme_centiseconds_difference_signedPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
          'jme_centiseconds_difference_signed');
  late final _jme_centiseconds_difference_signed =
      _jme_centiseconds_difference_signedPtr
          .asFunction<int Function(int, int)>();

  int jme_centiseconds_normalize(
    int p,
  ) {
    return _jme_centiseconds_normalize(
      p,
    );
  }

  late final _jme_centiseconds_normalizePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
          'jme_centiseconds_normalize');
  late final _jme_centiseconds_normalize =
      _jme_centiseconds_normalizePtr.asFunction<int Function(int)>();

  int jme_centiseconds_round_second(
    int x,
  ) {
    return _jme_centiseconds_round_second(
      x,
    );
  }

  late final _jme_centiseconds_round_secondPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>(
          'jme_centiseconds_round_second');
  late final _jme_centiseconds_round_second =
      _jme_centiseconds_round_secondPtr.asFunction<int Function(int)>();

  void jme_close() {
    return _jme_close();
  }

  late final _jme_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('jme_close');
  late final _jme_close = _jme_closePtr.asFunction<void Function()>();

  int jme_date_is_valid(
    int year,
    int month,
    int day,
    int calendar,
  ) {
    return _jme_date_is_valid(
      year,
      month,
      day,
      calendar,
    );
  }

  late final _jme_date_is_validPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int, ffi.Int, ffi.Int, ffi.Int)>>('jme_date_is_valid');
  late final _jme_date_is_valid =
      _jme_date_is_validPtr.asFunction<int Function(int, int, int, int)>();

  int jme_day_of_week(
    double jd,
  ) {
    return _jme_day_of_week(
      jd,
    );
  }

  late final _jme_day_of_weekPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Double)>>(
          'jme_day_of_week');
  late final _jme_day_of_week =
      _jme_day_of_weekPtr.asFunction<int Function(double)>();

  int jme_day_of_year(
    int year,
    int month,
    int day,
    int calendar,
  ) {
    return _jme_day_of_year(
      year,
      month,
      day,
      calendar,
    );
  }

  late final _jme_day_of_yearPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Int, ffi.Int, ffi.Int, ffi.Int)>>('jme_day_of_year');
  late final _jme_day_of_year =
      _jme_day_of_yearPtr.asFunction<int Function(int, int, int, int)>();

  int jme_days_in_month(
    int year,
    int month,
    int calendar,
  ) {
    return _jme_days_in_month(
      year,
      month,
      calendar,
    );
  }

  late final _jme_days_in_monthPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int, ffi.Int)>>(
          'jme_days_in_month');
  late final _jme_days_in_month =
      _jme_days_in_monthPtr.asFunction<int Function(int, int, int)>();

  double jme_decimal_hour(
    int hour,
    int minute,
    double second,
  ) {
    return _jme_decimal_hour(
      hour,
      minute,
      second,
    );
  }

  late final _jme_decimal_hourPtr = _lookup<
          ffi
          .NativeFunction<ffi.Double Function(ffi.Int, ffi.Int, ffi.Double)>>(
      'jme_decimal_hour');
  late final _jme_decimal_hour =
      _jme_decimal_hourPtr.asFunction<double Function(int, int, double)>();

  double jme_degree_midpoint(
    double x1,
    double x0,
  ) {
    return _jme_degree_midpoint(
      x1,
      x0,
    );
  }

  late final _jme_degree_midpointPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double, ffi.Double)>>(
          'jme_degree_midpoint');
  late final _jme_degree_midpoint =
      _jme_degree_midpointPtr.asFunction<double Function(double, double)>();

  double jme_degree_normalize(
    double x,
  ) {
    return _jme_degree_normalize(
      x,
    );
  }

  late final _jme_degree_normalizePtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double)>>(
          'jme_degree_normalize');
  late final _jme_degree_normalize =
      _jme_degree_normalizePtr.asFunction<double Function(double)>();

  double jme_degrees_difference(
    double p1,
    double p2,
  ) {
    return _jme_degrees_difference(
      p1,
      p2,
    );
  }

  late final _jme_degrees_differencePtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double, ffi.Double)>>(
          'jme_degrees_difference');
  late final _jme_degrees_difference =
      _jme_degrees_differencePtr.asFunction<double Function(double, double)>();

  double jme_degrees_difference_signed(
    double p1,
    double p2,
  ) {
    return _jme_degrees_difference_signed(
      p1,
      p2,
    );
  }

  late final _jme_degrees_difference_signedPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double, ffi.Double)>>(
          'jme_degrees_difference_signed');
  late final _jme_degrees_difference_signed = _jme_degrees_difference_signedPtr
      .asFunction<double Function(double, double)>();

  double jme_degrees_to_hours(
    double degrees,
  ) {
    return _jme_degrees_to_hours(
      degrees,
    );
  }

  late final _jme_degrees_to_hoursPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double)>>(
          'jme_degrees_to_hours');
  late final _jme_degrees_to_hours =
      _jme_degrees_to_hoursPtr.asFunction<double Function(double)>();

  double jme_degrees_to_radians(
    double degrees,
  ) {
    return _jme_degrees_to_radians(
      degrees,
    );
  }

  late final _jme_degrees_to_radiansPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double)>>(
          'jme_degrees_to_radians');
  late final _jme_degrees_to_radians =
      _jme_degrees_to_radiansPtr.asFunction<double Function(double)>();

  double jme_delta_t(
    double jd_ut,
  ) {
    return _jme_delta_t(
      jd_ut,
    );
  }

  late final _jme_delta_tPtr =
      _lookup<ffi.NativeFunction<ffi.Double Function(ffi.Double)>>(
          'jme_delta_t');
  late final _jme_delta_t =
      _jme_delta_tPtr.asFunction<double Function(double)>();

  double jme_delta_t_ex(
    double jd_ut,
    int model,
    ffi.Pointer<ffi.Char> error,
  ) {
    return _jme_delta_t_ex(
      jd_ut,
      model,
      error,
    );
  }

  late final _jme_delta_t_exPtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(
              ffi.Double, ffi.Int, ffi.Pointer<ffi.Char>)>>('jme_delta_t_ex');
  late final _jme_delta_t_ex = _jme_delta_t_exPtr
      .asFunction<double Function(double, int, ffi.Pointer<ffi.Char>)>();

  int jme_double_to_long(
    double x,
  ) {
    return _jme_double_to_long(
      x,
    );
  }

  late final _jme_double_to_longPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Double)>>(
          'jme_double_to_long');
  late final _jme_double_to_long =
      _jme_double_to_longPtr.asFunction<int Function(double)>();

  void jme_ecliptic_to_equatorial(
    double lon,
    double lat,
    double eps,
    ffi.Pointer<ffi.Double> ra,
    ffi.Pointer<ffi.Double> dec,
  ) {
    return _jme_ecliptic_to_equatorial(
      lon,
      lat,
      eps,
      ra,
      dec,
    );
  }
